Document argocd setup for appgate-operator

--- a/README.org
+++ b/README.org
@@ -256,6 +256,186 @@ To deploy on a real k8s cluster follow these steps:
   kubectl create -f manifest/02-appgate-operator.yaml
 #+END_SRC
 
+** Deploying the operator with argocd
+In this setup we will use argocd to keep track of changes in a github repository
+containing the desired state of the appgate environment.
+
+We will use the push mode in argocd (someone or something needs to tell argocd
+to sync when changes are done) but it's easy to change it to let argocd to pull
+the repository to apply automatically changes (not recommended though).
+
+*** Create cluster or use a cluster we already have.
+The easies way of creating a cluster to start with is to use GCP. See GCP
+documentation.
+
+*** Install argocd in our cluster
+This process is well explained in the argo web but let's summarized it:
+
+#+BEGIN_SRC shell
+  # Create a role binding allowing to user to do stuff
+  kubectl create clusterrolebinding cluster-admin-binding \
+	  --clusterrole=cluster-admin --user="$(gcloud config get-value account)"
+
+  # Create a new namespace to deploy the argocd stuff
+  kubectl create namespace argocd
+
+  # Install argocd in our cluster
+  kubectl apply -n argocd \
+	  -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+
+  # Optional. Open the web ui to the exterior.
+  kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'
+  ARGOCD_IP=$(kubectl get services -n argocd|awk '$2 ~ /LoadBalancer/ {print($4)}')
+
+  # Get the password of our new argocd instace
+  ARGOCD_PWD=$(kubectl get pods -n argocd|awk '$1 ~ /argocd-server/ {print($1)}')
+
+  # Login into argocd
+  argocd login $ARGOCD_IP
+
+  # Change password, current password is in $ARGOCD_PWD
+  argocd account update-password
+#+END_SRC
+
+*** Prepare appgate-operator
+We will create the namespace and the needed CRD for the appgate-operator.
+
+1. We will create first a new namespace in our cluster.
+2. Then we will register the CRD data in k8s.
+3. Finally we create the role allowing our pod to listen new events from the new
+   CRD data.
+
+#+BEGIN_SRC shell
+  alias k="kubectl -n appgate-test-1"
+  kubectl create -f manifests/00-namespace.yaml
+  kubectl create -f manifests/00-cdr.yaml
+  kubectl create -f manifests/01-role.yaml
+#+END_SRC
+  
+We need now to prepare the secrets in the namespace to be there ready for when
+the deployment is done. If you have an automated way of dealing with secrets you
+can omit this step.
+
+#+BEGIN_SRC shell
+  # Only needed if you use a private docker repository
+  kubectl create -f manifests/01-registry.yaml
+  kubectl create -f manifests/01-secrets.yaml
+#+END_SRC
+
+*** Github preparations
+Now we need to tell argocd about our application (the one containing all the
+entities that we want to keep in sync via the appgate-operator).
+
+In case your github repository is a private one you will need to do some extra
+steps to make it available in gocd:
+
+1. Create a new deployment key in the github's project.
+2. Add the private part of the key in argocd (see argocd documentation).
+   
+*** Register the application in argocd
+Now that we have everything ready we can create our new application in argocd.
+
+Using the previous ssh key we added in argocd create a new application that
+points to our repository in github and configure it to be deployed in the same
+namespace we created when preparing the appgate-operator.
+
+Set the sync mode to manual.
+
+Once this is done we will see the new application appearing in the argocd web
+ui. It says it's out of sync since we specified manual synchronization.
+
+*** Environment preparations
+At this point everything is ready to be executed but our environment needs to be
+accessible from the nodes conforming the k8s cluster. Do whatever is needed in
+your environment to make sure the k8s nodes can reach your controller for
+instance in AWS we just need to add the public ip of the k8s nodes into the
+security group used by the controller.
+
+*** Syncing our application
+Right now we have the application created in argocd pointing to the github
+repository. That repository should contain a directory called ~appgate-test-1~
+with the following files:
+
+ - ~appgate-test-1/02-appgate-operator.yaml~ :: Deployment file.
+ - ~appgate-test-1/01-config.yaml~ :: File with the configuration of
+      appgate-operator.
+ - ~appgate-test-1/entities.yaml~ :: File with the entities we want to have.
+
+We don't need to have all the entities in one yaml file, we can have one file
+per entity or one file per entity type, argocd will take care of syncing the CRD
+objects created by the contents of those files.
+
+Once all that is ready we can just press `sync` in the argocd web ui. If
+everything works as expected argocd will create the new appgate-operator
+deployment with the configuration and the entities specified.
+
+*** Checking that it worked
+We can see the logs of the pod created to run the appgate-operator in the argocd
+web ui (we can see also the specs of all the objects synchronized).
+
+If we prefer we can see the logs from the k8s cluster using `kubectl`:
+
+#+BEGIN_SRC shell
+  k get deployments # list the deployments
+  k get pods # get all the pods, one of those is our appgate-operator
+  k logs $(k get pods | awk '$3 ~ /Running/ {print($1)}') -f # see the logs
+#+END_SRC
+
+We can also see the current config and current secrets:
+#+BEGIN_SRC shell
+  k get config appgate-operator-conf -o yaml
+  k get secret appgate-operator-secrets -o yaml
+#+END_SRC
+
+Or even the entities registered in the cluster (it should be the same as we have
+in the git repository at this moment):
+
+#+BEGIN_SRC shell
+  k get policies
+  k get entitlements
+  k get conditions
+#+END_SRC
+
+*** Updating image
+If we have a new image for the appgate-operator we want to deploy we can just
+delete the current pod (using the argocd web ui) or the kubectl command:
+
+#+BEGIN_SRC shell
+  k delete pod $(k get pods | awk '$3 ~ /Running/ {print($1)}')
+  k logs $(k get pods | awk '$3 ~ /Running/ {print($1)}') -f
+#+END_SRC
+
+Since our operator runs as a deployment with replica 1 k8s will create a new one
+pulling the new image from the docker registry.
+
+*** Changing configuration manually
+When synced for first time argocd will create the configmap with the
+configuration used by the appgate-operator. It runs by default in dry-mode so it
+would not do anything at this point (just printing the plan apply).
+
+If we want to make it operate in normal mode we can just change the
+configuration in the github repo, merge it and click sync again (the gitops
+thing).
+
+But we can also do it manually from argocdd:
+
+1. In the application view click the box representing the configmap.
+2. There click edit and change the dry-run variable to "0"
+
+At this point if you look into the configuration using kubectl you will see that
+the value has changed:
+
+#+BEGIN_SRC shell
+  k get configmap appgate-operator-conf -o json|jq '.data["appgate-operator-dry-run"]'
+#+END_SRC
+
+Now we can just delete the pod again and a new one reading the config will be
+deployed.
+
+#+BEGIN_SRC shell
+  k delete pod $(k get pods | awk '$3 ~ /Running/ {print($1)}')
+#+END_SRC
+
 *** Debugging
 We can get the status of the operator like this (appgate-test-1 is the namespace
 we are using):
