SRC blocks dont work well with numbered lists

--- a/README.org
+++ b/README.org
@@ -189,21 +189,25 @@ The rest of environment variables are taken from a ConfigMap k8s entry (see
 ** Testing locally against a k8s cluster
 To test it follow these steps:
  
- 1. Create a k8s cluster (and get the credentials)
- 2. Create the namespace
+ - Create a k8s cluster (and get the credentials)
+
+ - Create the namespace
 #+BEGIN_SRC shell
   kubectl create -f manifest/00-namespace.yaml
 #+END_SRC
- 3. Create the CRDs
+
+ - Create the CRDs
 #+BEGIN_SRC shell
   kubectl create -f manifest/00-crd.yaml
 #+END_SRC
- 4. Start the operator
+
+ - Start the operator
 #+BEGIN_SRC shell
   make virtualenv
   ./virtualenv/bin/python3 -m appgate appgate-test-1
 #+END_SRC
- 5. Create the objects
+
+ - Create the objects
 #+BEGIN_SRC shell
   kubectl create -f examples/condition.yaml -n appgate-test-1
   kubectl delete -f examples/condition.yaml -n appgate-test-1
@@ -213,32 +217,32 @@ To test it follow these steps:
 ** Deploying the operator on a cluster
 To deploy on a real k8s cluster follow these steps:
 
- 1. Create a k8s cluster or use an existing one (and get credentials)
- 2. Create the namespace
+ - Create a k8s cluster or use an existing one (and get credentials)
+ - Create the namespace
 #+BEGIN_SRC shell
   kubectl create -f manifest/00-namespace.yaml
 #+END_SRC
- 3. Create the CRDs
+ - Create the CRDs
 #+BEGIN_SRC shell
   kubectl create -f manifest/00-crd.yaml
 #+END_SRC
- 4. Create the needed config
+ - Create the needed config
  See [[configuration]] section for details about how to configure it.
 #+BEGIN_SRC shell
   kubectl create -f manifest/01-config.yaml
   kubectl create -f manifest/01-secrets.yaml
 #+END_SRC
- 5. Configure the registry if needed
+ - Configure the registry if needed
  This step is only needed if you are deploying the appgate-operator image from a
  private docker registry (or from a private repository).
 #+BEGIN_SRC shell
   kubectl create -f manifest/01-registry.yaml
 #+END_SRC
- 6. Add permissions to get/watch/list the CRD entities in appgate-operator
+ - Add permissions to get/watch/list the CRD entities in appgate-operator
 #+BEGIN_SRC shell
   kubectl create -f manifest/01-role.yaml
 #+END_SRC
- 7. Deploy the appgate-operator
+ - Deploy the appgate-operator
 #+BEGIN_SRC shell
   kubectl create -f manifest/02-appgate-operator.yaml
 #+END_SRC
@@ -287,9 +291,9 @@ This process is well explained in the argo web but let's summarized it:
 *** Prepare appgate-operator
 We will create the namespace and the needed CRD for the appgate-operator.
 
-1. We will create first a new namespace in our cluster.
-2. Then we will register the CRD data in k8s.
-3. Finally we create the role allowing our pod to listen new events from the new
+- We will create first a new namespace in our cluster.
+- Then we will register the CRD data in k8s.
+- Finally we create the role allowing our pod to listen new events from the new
    CRD data.
 
 #+BEGIN_SRC shell
